--- a/css/custom/navBar.css
+++ b/css/custom/navBar.css
@@ -15,7 +15,7 @@ class/id {
 .navbar {
   margin: 0px;
 
-  background-color: rgba(255,255,255,0);
+  background-color: rgba(0,0,0,0);
   border: none;
   padding:10px;
   opacity: 1;
@@ -23,47 +23,18 @@ class/id {
 .navbar-right {
   margin: 0;
 }
-.nav > li.dropdown.open {
-  position:static;
-}
-.nav > li.dropdown.open .dropdown-menu {
-  display: table;
-  text-align: center;
-
-  background-color: #125688;
-  border-top: 2px solid #FFFFFF;
-  border-radius: 0px;
-  border-left: none;
-  font-size: 26px;
-  width:100%;
-  height:65px;
-}
-.navbar-default .navbar-nav > li > .explore,
-.navbar-default .navbar-nav > li > .explore:focus,
-.navbar-default .navbar-nav > li > .explore:hover {
-  left:75%;
-
-  font-size: 24px;
-  color:#000000;
-  opacity: 0;
-}
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
   background-color: #125688;
 }
+.list {
+  margin-left: 100px;
+  opacity: 0;
 
-.dropdown-menu > li {
-  display: inline-block;
 }
-.dropdown-menu > li > a {
-  margin-top:5px;
-
-  color:#FFFFFF;
-}
-.dropdown-menu > li > a:focus,
-.dropdown-menu > li > a:hover {
-  background-color: #125688;
+.navbar-default .navbar-nav> li > a {
+  font-size: 15px;
   color:#FFFFFF;
 }
 .get {
