change bkg color

--- a/css/custom/chapter2.css
+++ b/css/custom/chapter2.css
@@ -15,7 +15,7 @@ class/id {
 .chapter2 > .container {
   margin-top: 0%;
 
-  background-color: #c8c8c8;
+  background-color: #FFFFFF;
   opacity: 1;
   border-top:5px solid #8becff;
 }
