--- a/css/custom/chapter3.css
+++ b/css/custom/chapter3.css
@@ -30,7 +30,7 @@ class/id {
 
   font-size: 24px;
 }
-.paragraph {
+.chapter3 > .paragraph {
   float:left;
   margin-left: 10%;
   margin-top: 10%;
