--- a/css/custom/welcome.css
+++ b/css/custom/welcome.css
@@ -1,7 +1,10 @@
-/* chapter1.css
+/* welcome.css
 // Last Revised By - Juan Sierra
-// Last Revised Date - 6.9.16
+// Last Revised Date - 6.17.16
 // Contains background image and get started button
+//
+// ***************** Revision ************************
+// Changed file name and class names
 */
 
 /*
@@ -12,7 +15,7 @@ class/id {
 }
 */
 
-.chapter1 {
+.welcome {
   background: linear-gradient( rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url('/./images/background.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -27,10 +30,18 @@ class/id {
   font-family: raleway;
   font-weight: bold;
 }
+.background-text2 {
+  text-align: center;
+
+  color:  white;
+  font-size: 36px;
+  font-family: raleway;
+  font-weight: bold;
+}
 .getStarted {
   left:50%;
   margin-left: -115px;
-  margin-top: 26%;
+  margin-top: 21%;
   position: absolute;
 
   background-color: transparent;
