--- a/css/custom/motivated.css
+++ b/css/custom/motivated.css
@@ -15,38 +15,45 @@ class/id {
   //Style
 }
 */
-
-.motivated > .container {
-    margin-top: 1%;
-    background-color: #f2f2f2;
-    border-top: 5px solid #8becff;
-}
 .motiv-image {
-  float:right;
-  margin-right: 15%;
+  position: absolute;
 
-  width:25%;
+  background: url('/./images/motivated.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  -webkit-filter: blur(2px) grayscale(100%) brightness(30%);
+  -moz-filter: blur(2px) grayscale(100%) brightness(30%);
+  -o-filter: blur(2px) grayscale(100%) brightness(30%);
+  -ms-filter: blur(2px) grayscale(100%) brightness(30%);
+  filter: blur(2px) grayscale(100%) brightness(30%);
+
+
+  width:100%;
+  height:100vh;
+  z-index: -1;
 }
-.motiv-body {
-  float:left;
-
-  width:60%;
+.motivated > .container {
+    border-top: 5px solid #8becff;
 }
 .motiv-title {
   margin-top:80px;
   text-align: center;
 
-  color:#000000;
+  color:#FFFFFF;
   font-family: raleway;
   font-size: 36px;
   font-weight: bold;
   padding: 10px;
 }
 .motiv-paragraph {
-  margin-top: 10%;
+  margin-top: 5%;
   text-align: center;
+  width:50%;
+  margin-left: 330px;
 
-  color:#000000;
+  color:#FFFFFF;
   font-family: raleway;
   font-size: 34px;
   font-weight: bold;
