--- a/css/custom/header.css
+++ b/css/custom/header.css
@@ -19,7 +19,8 @@ class/id {
   background: linear-gradient( rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url('/./images/background.jpg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  height:100vh;
+  width:100%;
 }
 .background-text {
   margin-top: 19%;
