--- a/css/custom/comfortable.css
+++ b/css/custom/comfortable.css
@@ -15,48 +15,91 @@ class/id {
   //Style
 }
 */
-.comf-image {
-  position: absolute;
+@media (min-width: 992px) {
+  .comf-image {
+    position: absolute;
 
-  background: url('/./images/comft.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background: url('/./images/comft.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-  -webkit-filter: blur(2px) grayscale(100%) brightness(30%);
-  -moz-filter: blur(2px) grayscale(100%) brightness(30%);
-  -o-filter: blur(2px) grayscale(100%) brightness(30%);
-  -ms-filter: blur(2px) grayscale(100%) brightness(30%);
-  filter: blur(2px) grayscale(100%) brightness(30%);
+    -webkit-filter: blur(2px) grayscale(100%) brightness(30%);
+    -moz-filter: blur(2px) grayscale(100%) brightness(30%);
+    -o-filter: blur(2px) grayscale(100%) brightness(30%);
+    -ms-filter: blur(2px) grayscale(100%) brightness(30%);
+    filter: blur(2px) grayscale(100%) brightness(30%);
 
-  width:100%;
-  height:100vh;
-  z-index: -1;
+    width:100%;
+    height:100vh;
+    z-index: -1;
+  }
+  .comf-title {
+    margin-top:80px;
+    text-align: center;
+
+    color:#FFFFFF;
+    font-family: raleway;
+    font-size: 36px;
+    font-weight: bold;
+    padding: 10px;
+  }
+  .comf-paragraph {
+    margin-top: 5%;
+    width:50%;
+    text-align: center;
+    margin-left: 330px;
+
+    color:#FFFFFF;
+    font-family: raleway;
+    font-size: 34px;
+    font-weight: bold;
+  }
 }
-.comfortable > .container {
-    margin-top: 1%;
-    border-top: 5px solid #8becff;
 
-    z-index:0;
-}
-.comf-title {
-  margin-top:80px;
-  text-align: center;
+@media screen and (max-width: 767px) {
+    .comf-image {
+      position: absolute;
 
-  color:#FFFFFF;
-  font-family: raleway;
-  font-size: 36px;
-  font-weight: bold;
-  padding: 10px;
-}
-.comf-paragraph {
-  margin-top: 5%;
-  width:50%;
-  text-align: center;
-  margin-left: 330px;
+      background: url('/./images/comft.jpg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
 
-  color:#FFFFFF;
-  font-family: raleway;
-  font-size: 34px;
-  font-weight: bold;
+      -webkit-filter: blur(2px) grayscale(100%) brightness(30%);
+      -moz-filter: blur(2px) grayscale(100%) brightness(30%);
+      -o-filter: blur(2px) grayscale(100%) brightness(30%);
+      -ms-filter: blur(2px) grayscale(100%) brightness(30%);
+      filter: blur(2px) grayscale(100%) brightness(30%);
+
+      width:100%;
+      height:100vh;
+      z-index: -1;
+    }
+    .comf-body {
+      width:90%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .comf-title {
+      margin-top:40px;
+      text-align: center;
+
+      color:#FFFFFF;
+      font-family: raleway;
+      font-size: 34px;
+      font-weight: bold;
+      padding: 10px;
+    }
+    .comf-paragraph {
+      margin-top: 5%;
+      width:100%;
+      text-align: center;
+
+      color:#FFFFFF;
+      font-family: raleway;
+      font-size: 28px;
+      font-weight: bold;
+    }
+  }
 }
