--- a/css/custom/fitly.css
+++ b/css/custom/fitly.css
@@ -14,36 +14,65 @@ class/id {
   //Style
 }
 */
-.fitly > .container {
-  border-top:5px solid #8becff;
-}
-.fitly-image {
-  float:left;
-  margin-left: 15%;
+@media (min-width: 992px) {
+  .fitly-image {
+    float:left;
+    margin-left: 15%;
 
-  width:25%;
-}
-.fitly-body {
-  float:right;
+    width:25%;
+  }
+  .fitly-body {
+    float:right;
 
-  width:60%;
-}
-.fitly-title {
-  margin-top:80px;
-  text-align: center;
+    width:60%;
+  }
+  .fitly-title {
+    margin-top:80px;
+    text-align: center;
 
-  color:#000000;
-  font-family: raleway;
-  font-size: 36px;
-  font-weight: bold;
-  padding: 10px;
-}
-.fitly-paragraph {
-  margin-top: 10%;
-  text-align: center;
+    color:#000000;
+    font-family: raleway;
+    font-size: 36px;
+    font-weight: bold;
+    padding: 10px;
+  }
+  .fitly-paragraph {
+    margin-top: 10%;
+    text-align: center;
 
-  color:#000000;
-  font-family: raleway;
-  font-size: 34px;
-  font-weight: bold;
+    color:#000000;
+    font-family: raleway;
+    font-size: 34px;
+    font-weight: bold;
+  }
+}
+@media screen and (max-width: 767px) {
+  .fitly-image {
+    margin-left: 15%;
+    width:75%;
+  }
+  .fitly-body {
+    width:90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .fitly-title {
+    margin-top:30px;
+    text-align: center;
+
+    color:#000000;
+    font-family: raleway;
+    font-size: 34px;
+    font-weight: bold;
+    padding: 10px;
+  }
+  .fitly-paragraph {
+    margin-top: 10px  ;
+    text-align: center;
+
+    color:#000000;
+    font-family: raleway;
+    font-size: 28px;
+    font-weight: bold;
+  }
 }
