--- a/css/custom/motivated.css
+++ b/css/custom/motivated.css
@@ -15,46 +15,89 @@ class/id {
   //Style
 }
 */
-.motiv-image {
-  position: absolute;
+@media (min-width: 992px) {
+  .motiv-image {
+    position: absolute;
 
-  background: url('/./images/motivated.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    background: url('/./images/motivated.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-  -webkit-filter: blur(2px) grayscale(100%) brightness(30%);
-  -moz-filter: blur(2px) grayscale(100%) brightness(30%);
-  -o-filter: blur(2px) grayscale(100%) brightness(30%);
-  -ms-filter: blur(2px) grayscale(100%) brightness(30%);
-  filter: blur(2px) grayscale(100%) brightness(30%);
+    -webkit-filter: blur(2px) grayscale(100%) brightness(30%);
+    -moz-filter: blur(2px) grayscale(100%) brightness(30%);
+    -o-filter: blur(2px) grayscale(100%) brightness(30%);
+    -ms-filter: blur(2px) grayscale(100%) brightness(30%);
+    filter: blur(2px) grayscale(100%) brightness(30%);
 
+    width:100%;
+    height:100vh;
+    z-index: -1;
+  }
+  .motiv-title {
+    margin-top:80px;
+    text-align: center;
 
-  width:100%;
-  height:100vh;
-  z-index: -1;
+    color:#FFFFFF;
+    font-family: raleway;
+    font-size: 36px;
+    font-weight: bold;
+    padding: 10px;
+  }
+  .motiv-paragraph {
+    margin-top: 5%;
+    text-align: center;
+    width:50%;
+    margin-left: 330px;
+
+    color:#FFFFFF;
+    font-family: raleway;
+    font-size: 34px;
+    font-weight: bold;
+  }
 }
-.motivated > .container {
-    border-top: 5px solid #8becff;
-}
-.motiv-title {
-  margin-top:80px;
-  text-align: center;
 
-  color:#FFFFFF;
-  font-family: raleway;
-  font-size: 36px;
-  font-weight: bold;
-  padding: 10px;
-}
-.motiv-paragraph {
-  margin-top: 5%;
-  text-align: center;
-  width:50%;
-  margin-left: 330px;
+@media screen and (max-width: 767px) {
+  .motiv-image {
+    position: absolute;
 
-  color:#FFFFFF;
-  font-family: raleway;
-  font-size: 34px;
-  font-weight: bold;
+    background: url('/./images/motivated.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    -webkit-filter: blur(2px) grayscale(100%) brightness(30%);
+    -moz-filter: blur(2px) grayscale(100%) brightness(30%);
+    -o-filter: blur(2px) grayscale(100%) brightness(30%);
+    -ms-filter: blur(2px) grayscale(100%) brightness(30%);
+    filter: blur(2px) grayscale(100%) brightness(30%);
+
+    width:100%;
+    height:100vh;
+    z-index: -1;
+  }
+  .motiv-body {
+    width:90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .motiv-title {
+    margin-top:80px;
+    text-align: center;
+
+    color:#FFFFFF;
+    font-family: raleway;
+    font-size: 34px;
+    font-weight: bold;
+    padding: 10px;
+  }
+  .motiv-paragraph {
+    margin-top: 5%;
+    text-align: center;
+
+    color:#FFFFFF;
+    font-family: raleway;
+    font-size: 28px;
+    font-weight: bold;
+  }
 }
